blender 2.76 testbuild2 problem with snapping #46099

Closed
opened 2015-09-13 17:47:16 +02:00 by Vlad · 5 comments

When trying to snap a vertex from an object to another one and the second one just consists of one edge (two verticies connected - a line) vertex snapping seems doesnt work, example attached.Looks like the same problem was in previous versions. Strange thing - but when I extrude another vertex in the second object (now it is two edges and three verticies) snapping works.bug_snapping.rar

When trying to snap a vertex from an object to another one and the second one just consists of one edge (two verticies connected - a line) vertex snapping seems doesnt work, example attached.Looks like the same problem was in previous versions. Strange thing - but when I extrude another vertex in the second object (now it is two edges and three verticies) snapping works.[bug_snapping.rar](https://archive.blender.org/developer/F233016/bug_snapping.rar)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Vlad self-assigned this 2015-09-13 17:47:16 +02:00
Author

Added subscriber: @GlancingEYE

Added subscriber: @GlancingEYE
Vlad removed their assignment 2015-09-14 11:28:01 +02:00

Added subscriber: @mont29

Added subscriber: @mont29
Bastien Montagne self-assigned this 2015-09-14 12:29:13 +02:00

This issue was referenced by 34843a855e

This issue was referenced by 34843a855e6b45cffbc0cd0ffae2d688e6ee1168

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46099
No description provided.